--- a/package.json
+++ b/package.json
@@ -4,12 +4,13 @@
   "version": "0.0.0",
   "type": "module",
   "scripts": {
+    "codegen:openapi": "sta -p ./src/shared/api/oas/openapi.v3.json -o ./src/shared/api/dto -n types.generated.ts --extract-request-params --no-client",
     "dev": "vite",
     "build": "tsc && vite build",
     "lint": "eslint . --ext ts,tsx --report-unused-disable-directives --max-warnings 0",
     "lint:staged": "lint-staged",
     "preview": "vite preview",
-    "prepare": "husky install"
+    "prepare": "npm run codegen:openapi && husky install"
   },
   "dependencies": {
     "@reduxjs/toolkit": "^1.9.5",
@@ -21,6 +22,7 @@
     "react-router": "^6.15.0",
     "react-router-dom": "^6.15.0",
     "react-transition-group": "^4.4.5",
+    "swiper": "^11.0.3",
     "tailwind-merge": "^1.14.0"
   },
   "devDependencies": {
@@ -50,6 +52,7 @@
     "postcss": "^8.4.29",
     "prettier": "^3.0.3",
     "prettier-plugin-tailwindcss": "^0.5.4",
+    "swagger-typescript-api": "^13.0.3",
     "tailwindcss": "^3.3.3",
     "typescript": "^5.2.2",
     "vite": "^4.4.9"
