--- a/package.json
+++ b/package.json
@@ -7,12 +7,14 @@
     "codegen:openapi": "sta -p ./src/shared/api/oas/openapi.v3.json -o ./src/shared/api/dto -n types.generated.ts --extract-request-params --no-client",
     "dev": "vite",
     "build": "tsc && vite build",
+    "test": "jest",
     "lint": "eslint . --ext ts,tsx --report-unused-disable-directives --max-warnings 0",
     "lint:staged": "lint-staged",
     "preview": "vite preview",
     "prepare": "npm run codegen:openapi && husky install"
   },
   "dependencies": {
+    "@headlessui/react": "^1.7.17",
     "@reduxjs/toolkit": "^1.9.5",
     "clsx": "^2.0.0",
     "compose-function": "^3.0.3",
@@ -28,7 +30,10 @@
   "devDependencies": {
     "@feature-sliced/eslint-config": "^0.1.0-beta.6",
     "@feature-sliced/eslint-plugin-messages": "^0.1.0-beta.2",
+    "@jest/globals": "^29.7.0",
+    "@tailwindcss/forms": "^0.5.7",
     "@types/compose-function": "^0.0.31",
+    "@types/jest": "^29.5.10",
     "@types/node": "^20.5.9",
     "@types/react": "^18.2.21",
     "@types/react-dom": "^18.2.7",
@@ -48,12 +53,15 @@
     "eslint-plugin-react-hooks": "^4.6.0",
     "eslint-plugin-react-refresh": "^0.4.3",
     "husky": "^8.0.3",
+    "jest": "^29.7.0",
     "lint-staged": "^14.0.1",
     "postcss": "^8.4.29",
     "prettier": "^3.0.3",
     "prettier-plugin-tailwindcss": "^0.5.4",
     "swagger-typescript-api": "^13.0.3",
     "tailwindcss": "^3.3.3",
+    "ts-jest": "^29.1.1",
+    "ts-node": "^10.9.1",
     "typescript": "^5.2.2",
     "vite": "^4.4.9"
   },
